@@ -45,6 +45,7 @@ import org.elasticsearch.test.ESTestCase;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class SourceOnlySnapshotTests extends ESTestCase {
@@ -59,7 +60,7 @@ public class SourceOnlySnapshotTests extends ESTestCase {
                 boolean modifyDeletedDocs = softDeletesField != null && randomBoolean();
                 SourceOnlySnapshot snapshoter = new SourceOnlySnapshot(targetDir,
                     modifyDeletedDocs ? () -> new DocValuesFieldExistsQuery(softDeletesField) : null,
-                    () -> List.of(SegmentInfos.readLatestCommit(dir))) {
+                    () -> Collections.emptyList()) { //TODO: Fix
                     @Override
                     DirectoryReader wrapReader(DirectoryReader reader) throws IOException {
                         return modifyDeletedDocs ? reader : super.wrapReader(reader);
@@ -169,7 +170,7 @@ public class SourceOnlySnapshotTests extends ESTestCase {
             writer.commit();
             Directory targetDir = newDirectory();
             IndexCommit snapshot = deletionPolicy.snapshot();
-            SourceOnlySnapshot snapshoter = new SourceOnlySnapshot(targetDir, () -> List.of(SegmentInfos.readLatestCommit(dir)));
+            SourceOnlySnapshot snapshoter = new SourceOnlySnapshot(targetDir, Collections::emptyList);
             snapshoter.syncSnapshot(snapshot);
 
             StandardDirectoryReader reader = (StandardDirectoryReader) DirectoryReader.open(snapshot);
@@ -184,7 +185,7 @@ public class SourceOnlySnapshotTests extends ESTestCase {
                 assertEquals(0, id.totalHits.value);
             }
 
-            snapshoter = new SourceOnlySnapshot(targetDir, () -> List.of(SegmentInfos.readLatestCommit(dir)));
+            snapshoter = new SourceOnlySnapshot(targetDir, Collections::emptyList);
             Collection<String> createdFiles = snapshoter.syncSnapshot(snapshot).files(false);
             assertEquals(0, createdFiles.size());
             deletionPolicy.release(snapshot);
@@ -204,7 +205,7 @@ public class SourceOnlySnapshotTests extends ESTestCase {
             writer.commit();
             {
                 snapshot = deletionPolicy.snapshot();
-                snapshoter = new SourceOnlySnapshot(targetDir, () -> List.of(SegmentInfos.readLatestCommit(dir)));
+                snapshoter = new SourceOnlySnapshot(targetDir, Collections::emptyList);
                 createdFiles = snapshoter.syncSnapshot(snapshot).files(false);
                 assertEquals(4, createdFiles.size());
                 for (String file : createdFiles) {
@@ -229,7 +230,7 @@ public class SourceOnlySnapshotTests extends ESTestCase {
             writer.commit();
             {
                 snapshot = deletionPolicy.snapshot();
-                snapshoter = new SourceOnlySnapshot(targetDir, () -> List.of(SegmentInfos.readLatestCommit(dir)));
+                snapshoter = new SourceOnlySnapshot(targetDir, Collections::emptyList);
                 createdFiles = snapshoter.syncSnapshot(snapshot).files(false);
                 assertEquals(1, createdFiles.size());
                 for (String file : createdFiles) {
@@ -287,7 +288,7 @@ public class SourceOnlySnapshotTests extends ESTestCase {
             writer.commit();
             try (Directory targetDir = newDirectory()) {
                 IndexCommit snapshot = deletionPolicy.snapshot();
-                SourceOnlySnapshot snapshoter = new SourceOnlySnapshot(targetDir, () -> List.of(SegmentInfos.readLatestCommit(dir)));
+                SourceOnlySnapshot snapshoter = new SourceOnlySnapshot(targetDir, Collections::emptyList);
                 snapshoter.syncSnapshot(snapshot);
 
                 try (DirectoryReader snapReader = DirectoryReader.open(targetDir)) {
